@@ -39,7 +39,77 @@ name|cayenne
 operator|.
 name|map
 operator|.
-name|*
+name|DataMap
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|DbEntity
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|Embeddable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|ObjEntity
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|Procedure
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|map
+operator|.
+name|QueryDescriptor
 import|;
 end_import
 
@@ -403,6 +473,73 @@ block|{
 block|}
 block|}
 block|}
+specifier|public
+name|void
+name|insertNodeInto
+parameter_list|(
+name|MutableTreeNode
+name|newChild
+parameter_list|,
+name|MutableTreeNode
+name|parent
+parameter_list|,
+name|int
+name|index
+parameter_list|)
+block|{
+name|parent
+operator|.
+name|insert
+argument_list|(
+name|newChild
+argument_list|,
+name|index
+argument_list|)
+expr_stmt|;
+name|int
+index|[]
+name|newIndexs
+init|=
+operator|new
+name|int
+index|[
+literal|1
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|filter
+operator|.
+name|pass
+argument_list|(
+operator|(
+name|DefaultMutableTreeNode
+operator|)
+name|newChild
+argument_list|)
+condition|)
+block|{
+name|newIndexs
+index|[
+literal|0
+index|]
+operator|=
+name|getPositionInTreeView
+argument_list|(
+name|parent
+argument_list|,
+name|newChild
+argument_list|)
+expr_stmt|;
+name|nodesWereInserted
+argument_list|(
+name|parent
+argument_list|,
+name|newIndexs
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|/** 	 * Returns root node cast into DefaultMutableTreeNode. 	 */
 specifier|public
 name|DefaultMutableTreeNode
@@ -738,7 +875,7 @@ return|;
 block|}
 specifier|private
 name|int
-name|getCount
+name|getPositionInTreeView
 parameter_list|(
 name|Object
 name|parent
@@ -877,7 +1014,7 @@ index|[
 literal|0
 index|]
 operator|=
-name|getCount
+name|getPositionInTreeView
 argument_list|(
 name|parent
 argument_list|,
