@@ -53,7 +53,17 @@ name|javax
 operator|.
 name|swing
 operator|.
-name|*
+name|JCheckBox
+import|;
+end_import
+
+begin_import
+import|import
+name|javax
+operator|.
+name|swing
+operator|.
+name|JPopupMenu
 import|;
 end_import
 
