@@ -36,6 +36,7 @@ CAY-2415 Transaction isolation and propagation support
 CAY-2416 Change TreeMap for HashMap to store data in Cayenne model classes
 CAY-2422 Modeler: Open driver setup window on driver load error
 CAY-2440 cdbimport: allow cross-schema relationships
+CAY-2439 Error deleting dbEntity when show only dbEntities filter is set
 
 Bug Fixes:
 
